--- a/src/main/resources/static/webApp/disabledFundInfo.html
+++ b/src/main/resources/static/webApp/disabledFundInfo.html
@@ -174,20 +174,20 @@
             </div>
 
         </div>
-        <div class="layui-form-item">
-            <div class="layui-inline">
-                <label class="layui-form-label">托养残疾人名单</label>
-                <div class="layui-input-block" style="padding-right:15px;">
-                    <input type="text" name="nursingList" class="layui-input" disabled>
-                </div>
-            </div>
-            <div class="layui-inline">
-                <label class="layui-form-label">低保或其他低收入证明</label>
-                <div class="layui-input-block" style="padding-right:15px;">
-                    <input type="text" name="lowIncomeCertificate" class="layui-input" disabled>
-                </div>
-            </div>
-        </div>
+        <!--<div class="layui-form-item">-->
+            <!--<div class="layui-inline">-->
+                <!--<label class="layui-form-label">托养残疾人名单</label>-->
+                <!--<div class="layui-input-block" style="padding-right:15px;">-->
+                    <!--<input type="text" name="nursingList" class="layui-input" disabled>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div class="layui-inline">-->
+                <!--<label class="layui-form-label">低保或其他低收入证明</label>-->
+                <!--<div class="layui-input-block" style="padding-right:15px;">-->
+                    <!--<input type="text" name="lowIncomeCertificate" class="layui-input" disabled>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
         <div class="layui-form-item">
             <div class="layui-inline">
                 <label class="layui-form-label">提交人</label>
@@ -341,6 +341,8 @@
             var data = obj.data //获得当前行数据
                 ,layEvent = obj.event; //获得 lay-event 对应的值
             pageid = data.id;
+            $("#dsrzm").attr("src",data.lowIncomeCertificate);
+            $("#cjrmd").attr("src",data.nursingList);
             if(layEvent === 'edit'){
                  quotaIndex = layer.open({
                     type: 1,
@@ -358,8 +360,7 @@
                 data.spzt = ["删除","待审批","已审批","已拒绝"][data.status];
                 form.render();
                 form.val("edit-form", data);
-                $("#dsrzm").attr("src",data.lowIncomeCertificate);
-                $("#cjrmd").attr("src",data.nursingList);
+
             }
             obj.tr.addClass('layui-table-click').siblings().removeClass('layui-table-click');
 
