--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -278,7 +278,7 @@
             {
                 // Web Socket 已连接上，使用 send() 方法发送数据
                 console.log("连接成功");
-                ws.send("message=on");
+                ws.send("on");
             };
 
             ws.onmessage = function (evt)
