相关问题修改

--- a/src/main/resources/static/webApp/manager/cockpit.html
+++ b/src/main/resources/static/webApp/manager/cockpit.html
@@ -253,7 +253,7 @@
 
 <script>
 	const now = new Date();
-	$("#today").html(` ${now.getMonth()}月${now.getDate()}日 `);
+	$("#today").html(` ${now.getMonth()+1}月${now.getDate()}日 `);
 
 
 
