--- a/src/main/resources/static/webApp/subsidyApplySubmit.html
+++ b/src/main/resources/static/webApp/subsidyApplySubmit.html
@@ -162,10 +162,12 @@
 	<div class="layui-form-item">
 		<div class="layui-inline">
 			<label class="layui-form-label">托养残疾人名单</label>
-			<div class="layui-input-inline">
+			<div class="layui-input-inline" style="width: 400px;">
 				<button type="button" class="layui-btn" id="test1">
-					<i class="layui-icon">&#xe67c;</i>选择文件
+					<i class="layui-icon">&#xe67c;</i>上传EXCEL
 				</button>
+				<a href="../jsons/moban.xlsx" download="模板">下载模板</a>
+
 				<input style="display: none;" id="tycjrmd" type="text" name="nursingList" required  lay-verify="required" placeholder="请输入" autocomplete="off" class="layui-input">
 			</div>
 		</div>
