--- a/src/main/resources/static/webApp/manager/serviceInfo.html
+++ b/src/main/resources/static/webApp/manager/serviceInfo.html
@@ -9,9 +9,7 @@
 	<link rel="stylesheet" href="../../css/init.css">
 	<link rel="stylesheet" href="../../css/search_form.css">
 	<style>
-		#tableContainer  .layui-table-header {
-			overflow-x: auto;
-		}
+
 	</style>
 </head>
 <body>
@@ -41,16 +39,94 @@
 	<table class="layui-hide" id="mainTable" lay-filter="test"></table>
 </div>
 
+<div id="editPanel" class="modal" style="display: none;">
+	<form class="layui-form" lay-filter="org-form" action="">
+		<div class="layui-form-item">
+			<label class="layui-form-label">残疾人服务内容大类</label>
+			<div class="layui-input-inline">
+				<select name="projectTypeId" lay-verify="required" disabled="disabled">
+					<option value="">请选择</option>
+					<option value="1">日间照料</option>
+					<option value="2">辅助性就业</option>
+					<option value="3">康复服务</option>
+					<option value="4">文体活动</option>
+					<option value="5">学习培训</option>
+					<option value="6">志愿者服务</option>
+					<option value="7">其他</option>
+				</select>
+			</div>
+		</div>
+
+		<div class="layui-form-item">
+			<label class="layui-form-label">创建项目名称</label>
+			<div class="layui-input-inline">
+				<input type="text" name="name" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" disabled="disabled">
+			</div>
+		</div>
+
+		<div class="layui-form-item">
+			<label class="layui-form-label">所属机构名称</label>
+			<div class="layui-input-inline">
+				<input type="text" name="organizationName" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" disabled="disabled">
+			</div>
+		</div>
+		<div class="layui-form-item">
+			<label class="layui-form-label">项目负责人</label>
+			<div class="layui-input-inline">
+				<input type="text" name="leader" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" disabled="disabled">
+			</div>
+		</div>
+
+		<div class="layui-form-item">
+			<label class="layui-form-label">项目简介</label>
+			<div class="layui-input-inline">
+				<input type="text" name="description" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" disabled="disabled">
+			</div>
+		</div>
+
+		<div class="layui-form-item">
+			<div class="layui-inline">
+				<label class="layui-form-label">项目图片</label>
+				<div id="xmtp" class="layui-input-inline">
+				</div>
+			</div>
+		</div>
+
+
+		<div class="layui-form-item">
+			<label class="layui-form-label">项目开始时间</label>
+			<div class="layui-input-inline">
+				<input id="startime"  placeholder="yyyy-MM-dd" type="text" name="startTime" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" disabled="disabled">
+			</div>
+		</div>
+		<div class="layui-form-item">
+			<label class="layui-form-label">项目结束时间</label>
+			<div class="layui-input-inline">
+				<input id="endtime"  placeholder="yyyy-MM-dd" type="text" name="endTime" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" disabled="disabled">
+			</div>
+		</div>
+
+		<div class="layui-form-item">
+			<div class="layui-input-block">
+				<button class="layui-btn" lay-submit lay-filter="formDemo">提交</button>
+				<button type="reset" class="layui-btn layui-btn-primary">重置</button>
+			</div>
+		</div>
+	</form>
+</div>
+
 
 <script src="../../js/jquery.min.js"></script>
 <script src="../../layui/layui.js"></script>
 <script src="../../js/heightClient.js"></script>
 
-
+<script type="text/html" id="barDemo">
+	<a class="layui-btn layui-btn-xs" lay-event="edit">查看</a>
+</script>
 <script>
-	layui.use('table', function(){
+	layui.use(['table','form','layer'], function(){
 		var table = layui.table;
-
+        var form = layui.form;
 		table.render({
 			elem: '#mainTable',
 			url:'/api/project/getPagesByDistrict?district=雨花台区&sorts=modifyTime',
@@ -82,10 +158,48 @@
 				{field:'adminName', width:100, title: '提交人', sort: true},
 				{field:'createTime', width:160, title: '提交时间', sort: true},
 				{field:'lastModifyTime', width:160, title: '更新时间', sort: true}
+                ,{fixed: 'right', width: 120, align:'center', toolbar: '#barDemo'}
 			]]
 			,page: true
 		});
+
+        function setDown(dom,str){
+            if(str.indexOf(".jpg") != -1 || str.indexOf(".png") != -1){
+                dom.html('<a target="_blank" href="'+str+'"><img src="'+str+'" style="width: 100px;"></a>')
+            }else if(str.indexOf(".doc") != -1 || str.indexOf(".docx") != -1){
+                dom.html('<a target="_blank" href="'+str+'"><img src="../images/word.png" style="width: 100px;"></a>')
+            }else if(str.indexOf(".xls") != -1 || str.indexOf(".xlsx") != -1){
+                dom.html('<a target="_blank" href="'+str+'"><img src="../images/xls.png" style="width: 100px;"></a>')
+            }
+        }
+
+
+        //监听行工具事件
+        table.on('tool(test)', function(obj){ //注：tool 是工具条事件名，test 是 table 原始容器的属性 lay-filter="对应的值"
+            var data = obj.data //获得当前行数据
+                ,layEvent = obj.event; //获得 lay-event 对应的值
+            pageid = data.id;
+            setDown($("#xmtp"),data.image);
+            if(layEvent === 'edit'){
+                quotaIndex = layer.open({
+                    type: 1,
+                    title: "服务项目信息",
+                    content: $("#editPanel").html(),
+                    area: ['600px', '700px'],
+                    success: function(layero, index){
+
+                    }
+                });
+                form.render();
+                form.val("org-form", data);
+
+            }
+
+        });
+
 	});
+
+
 
 
     function exportfile() {
