--- a/src/main/resources/static/webApp/subsidyApplyOrg.html
+++ b/src/main/resources/static/webApp/subsidyApplyOrg.html
@@ -28,8 +28,7 @@
 				<span onclick="exportfile()" style="margin-right: 10px;"><i
 						class="layui-icon layui-icon-file"></i>导出Excel
 				</span>
-				<span><i
-						class="layui-icon layui-icon-chart-screen"></i>
+				<span><i class="layui-icon layui-icon-chart-screen"></i>
 				</span>
 			</div>
 		</div>
