--- a/src/main/resources/static/webApp/subsidyApplySubmit.html
+++ b/src/main/resources/static/webApp/subsidyApplySubmit.html
@@ -239,9 +239,51 @@
             }
         })
 
+        upload.render({
+            elem: '#test1'
+            ,accept:"file"
+            ,url: '/api/upload/'
+            ,auto: false //选择文件后不自动上传
+            ,bindAction: '#testListAction' //指向一个按钮触发上传
+            ,choose: function(obj){
+                //预读本地文件，如果是多文件，则会遍历。(不支持ie8/9)
+                obj.preview(function(index, file, result){
+                    //console.log(index); //得到文件索引
+                    console.log(file); //得到文件对象
+                    //console.log(result); //得到文件base64编码，比如图片
+                    sendFile(file)
+
+                    //obj.resetFile(index, file, '123.jpg'); //重命名文件名，layui 2.3.0 开始新增
+
+                    //这里还可以做一些 append 文件列表 DOM 的操作
+
+                    //obj.upload(index, file); //对上传失败的单个文件重新上传，一般在某个事件中使用
+                    //delete files[index]; //删除列表中对应的文件，一般在某个事件中使用
+                });
+            }
+        });
+
+
+        function sendFile(files) {
+            var formData = new FormData();
+            formData.append("file", files);
+            $.ajax({
+                type: "POST",
+                url: "/api/apply/import_excel",
+				// headers:{"Content-Type":"application/vnd.ms-excel"},
+                data: formData,
+                processData: false,
+                success: function (data) {
+                    console.log(data);
+                    debugger
+                }
+            })
+        }
+
+
 		//执行实例
 		var uploadInst = upload.render({
-			elem: '#test1' //绑定元素
+			elem: '#a' //绑定元素
             ,accept:"file"
             ,url: '/api/apply/import_excel' //上传接口
             ,data:{type:"nursingList"}
